@@ -1,3 +1,9 @@
+kylin-display-switch (3.0.12kylin5) v101; urgency=medium
+
+  * KDS按下任意按键退出，屏蔽X86Display。
+
+ -- hebing <hebing@kylinos.cn>  Thu, 25 Feb 2021 15:58:53 +0800
+
 kylin-display-switch (3.0.12kylin4~hw4) v101; urgency=medium
 
   * 适配wayland下的主屏
